# stab_decomp_simulator

./: .gitignore  README.md  pyproject.toml  run_large_scale_simulation.py  verify_exp.py
src/: qiskit_converter.py  stabilizer_decomposed_state.py  stabilizer_state_ch_form.py  t_tensor_state.py
src/stab_decomp_simulator/: qiskit_converter.py  stabilizer_state_ch_form.py  toffoli_state.py  utils.py
src/stab_decomp_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ch_form_vs_qiskit.py  test_inner_product.py  test_project_and_remove.py  test_qiskit_converter.py  test_t_tensor_state.py
